--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/cric-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CricVista</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/cric-logo.png"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
